--- a/src/app/components/buy-stock/buy-stock.component.html
+++ b/src/app/components/buy-stock/buy-stock.component.html
@@ -1,19 +1,26 @@
 <h2>What do you want to buy?</h2>
-
 <app-stock-symbol-and-amount-input
   (selectedStockAndAmount)="stockAndAmountSelectionChanged($event)">
 </app-stock-symbol-and-amount-input>
-<ng-container *ngIf="stockAndSymbol.amountInput && stockAndSymbol.symbolInput">
+<ng-container *ngIf="selectedStockAndSymbol">
   <h2>
     {{
       'Current price for ' +
-        stockAndSymbol.amountInput +
+        selectedStockAndSymbol.amountInput +
         ' pieces of ' +
-        stockAndSymbol.symbolInput
+        selectedStockAndSymbol.symbolInput +
+        ':'
     }}
   </h2>
-  <div>
-    {{ '100 USD' }}
-  </div>
-  <button mat-raised-button color="primary">Buy now!</button>
+  <ng-container *ngIf="stockPriceDataLoading; else showPrice">
+    <div>loading...</div>
+  </ng-container>
+  <ng-template #showPrice>
+    <ng-container *ngIf="stockPriceData">
+      <div>
+        <h3>{{ stockPriceData.price + ' USD' }}</h3>
+      </div>
+      <button mat-raised-button color="primary">Buy now!</button></ng-container
+    >
+  </ng-template>
 </ng-container>
