--- a/src/app/components/stock-symbol-and-amount-input/stock-symbol-and-amount-input.component.html
+++ b/src/app/components/stock-symbol-and-amount-input/stock-symbol-and-amount-input.component.html
@@ -26,8 +26,7 @@
       *ngIf="stockInfoForm.controls.amountInput.value"
       matSuffix
       mat-icon-button
-      aria-label="Clear"
-      (click)="stockInfoForm.controls.amountInput.setValue(0)">
+      (click)="stockInfoForm.controls.amountInput.reset()">
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
