--- a/src/app/components/buy-stock/buy-stock.component.scss
+++ b/src/app/components/buy-stock/buy-stock.component.scss
@@ -1,4 +1,9 @@
 :host {
   display: block;
   margin: 10px;
+
+  .priceInfoContainer {
+    display: flex;
+    justify-content: space-between;
+  }
 }
