--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<mat-toolbar color="primary">
-  <h1>Reactive Programming Showcase</h1>
-</mat-toolbar>
-<app-buy-stock></app-buy-stock>
+<div class="app-container mat-app-background">
+  <mat-toolbar color="primary">
+    <h1>Reactive Programming Showcase</h1>
+  </mat-toolbar>
+  <app-buy-stock></app-buy-stock>
+</div>
