--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,24 @@
 :host {
-    display: block;
-    height: 98%;
-    width: 700px;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+
+  .app-container {
+    flex: 1 1 auto;
+    width: 750px;
     margin: 1% auto;
     border-radius: 15px;
 
     mat-toolbar {
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
 
-        h1 {
-            margin: 0;
-        }
+      h1 {
+        margin: 0;
+      }
     }
+  }
 }
-
