--- a/src/app/components/buy-stock/buy-stock.component.scss
+++ b/src/app/components/buy-stock/buy-stock.component.scss
@@ -5,5 +5,13 @@
   .priceInfoContainer {
     display: flex;
     justify-content: space-between;
+
+    .buyContainer {
+      display: flex;
+
+      button {
+        margin-right: 10px;
+      }
+    }
   }
 }
