--- a/src/app/components/buy-stock/buy-stock.component.html
+++ b/src/app/components/buy-stock/buy-stock.component.html
@@ -15,4 +15,9 @@
       <mat-icon>open_in_new</mat-icon>
     </button>
   </h2>
+  <div class="priceInfoContainer">
+    <h3 *ngIf="stockPriceData" style="font-weight: bold">
+      {{ stockPriceData.price | currency: 'USD' }}
+    </h3>
+  </div>
 </ng-container>
